--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     <!-- loaderend -->
     <nav class="my-nav navbar navbar-expand-lg {% block navbar %}navbar-dark{% endblock navbar %}">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"> <img src="https://www.iitg.ac.in/cepstrum/common/logo.svg" style="opacity: 1;" width="40%" height="40%" alt=""></a>
+            <a class="navbar-brand" href="{% url 'home' %}"> <img src="https://drive.google.com/uc?id=19n1ov4OCin6-m5CszF7W1CMke4ZG9yDP" style="opacity: 1;" width="40%" height="40%" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
