--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                             <li><a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a></li>
                             <!-- <li><a class="dropdown-item" href="https://medium.com/inplace/">Inplace</a></li> -->
                             <li><a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a></li>
-                            <li><a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">PaperMan</a>
+                            <li><a class="dropdown-item" href="https://iitg.ac.in/cepstrum/paperman.html">Paperman</a>
                             </li>
                             <!-- <li><a class="dropdown-item" href="{% url 'paperman:all' %}">PaperMan</a></li> -->
                             <li><a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intelect</a></li>
