--- a/team/templates/team_list.html
+++ b/team/templates/team_list.html
@@ -86,6 +86,7 @@ my-carousel" data-ride="carousel">
                                 <button type="button" class="btn btn-primary" onclick="window.location.href = '#4yr';">4th Year</button>
                                 <button type="button" class="btn btn-primary " onclick="window.location.href = '#3yr';">3rd Year</button>
                                 <button type="button" class="btn btn-primary" onclick="window.location.href = '#2yr';">2nd Year</button>
+                                <!-- <button type="button" class="btn btn-primary" onclick="window.location.href = '#1yr';">1st Year</button> -->
                                 <button type="button" class="btn btn-primary" onclick="window.location.href = '#Inphase';">Inphase Team</button>
                                 <button type="button" class="btn btn-primary" onclick="window.location.href = '#WebOps';">Web Ops Team</button>
                             </div>
@@ -236,6 +237,68 @@ my-carousel" data-ride="carousel">
         </div>
 
     </div>
+    <div class="container-fluid sections" id="2yr">
+
+        <h1 class="sections-header">2nd Year Reprentative</h1>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+
+            {% for i in team_list %} {% if i.category.name == '2nd year' %}
+            <div class="col">
+                <div class="card">
+                    <img src="{{i.pic.url}}" class="card-img-top" alt="...">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title">{{i.name}}</h5>
+                        <p class="card-text">{{i.position}}</p>
+                        <p class="card-text">{{i.email}}</p>
+                        <p class="card-text">+91-{{i.number}}</p>
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <a class="btn btn-primary" href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+              </svg></a>
+                        <a href="" class="btn btn-primary "><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+              </svg></a>
+                    </div>
+                </div>
+            </div>
+
+            {% endif %} {% endfor %}
+
+        </div>
+
+    </div>
+    <!-- <div class="container-fluid sections" id="1yr">
+
+        <h1 class="sections-header">1st Year Reprentative</h1>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+
+            {% for i in team_list %} {% if i.category.name == '1st year' %}
+            <div class="col">
+                <div class="card">
+                    <img src="{{i.pic.url}}" class="card-img-top" alt="...">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title">{{i.name}}</h5>
+                        <p class="card-text">{{i.position}}</p>
+                        <p class="card-text">{{i.email}}</p>
+                        <p class="card-text">+91-{{i.number}}</p>
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <a class="btn btn-primary" href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+              </svg></a>
+                        <a href="" class="btn btn-primary "><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+              </svg></a>
+                    </div>
+                </div>
+            </div>
+
+            {% endif %} {% endfor %}
+
+        </div>
+
+    </div> -->
     <!-- </div>
 </div> -->
     <!-- <div class="modal fade bd-example-modal-xl3" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
