--- a/inplace/templates/inplace/inplace_list.html
+++ b/inplace/templates/inplace/inplace_list.html
@@ -66,7 +66,7 @@
                     <h1><b>About <br> Inplace </b> </h1>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corporis, natus quos praesentium rerum aspernatur laudantium at nobis cupiditate velit fuga quo repellendus, consequuntur officiis. Repudiandae animi cupiditate cum ea?
+                        InPlace is the flagship publication of Cepstrum, IITG. This series features articles by junior and senior year students from the EEE department about their internship and placement experiences. The articles cover test preparation, work experience and everything in between.
                     </p>
                 </div>
 
