--- a/paperman/templates/paperman/paperman_list.html
+++ b/paperman/templates/paperman/paperman_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% load humanize %} {% load bootstrap %} {% load static %}{% block title %} Paperman | Cepstrum {% endblock title %} {% block css %}
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Acme&family=Lobster&family=Montserrat:wght@400;600;700;900&family=Nunito:wght@500&family=Pacifico&family=Poppins&display=swap');
     .carousel-item {
         height: 100vh;
         background: no-repeat center center scroll;
@@ -50,6 +51,30 @@
         padding: 5px 10px;
         border-radius: 5px;
     }
+    a{
+        text-decoration: none;
+        color: unset;
+    }
+    a:hover{
+        color: yellow;
+    }
+    .headers{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        text-decoration: none;
+        gap: 10px;
+    }
+    .raise{
+        width: 15vw;
+        border: 2px solid yellow;
+        padding: 10px;
+        font-size: 1.1rem;
+        font-family: 'Poppins';
+        display: inline-block;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
 </style>
 
 {% endblock %} {% block carousel %}
@@ -59,19 +84,35 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image:
-        url('/static/Paperman/Cover.jpg');">
+        <div class="carousel-item active" style="background: rgb(16,6,35);
+        background: linear-gradient(326deg, rgba(16,6,35,1) 0%, rgba(26,2,105,1) 100%);">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1><b>About <br> Paper-Man </b> </h1>
+                    <h1><b>About <font color="yellow">Paperman</font> </b> </h1>
                     <br>
                     <p>
                         Not only the hero you need, but also the one you deserve! Paperman is one of its kind initiative by Cepstrum with the sole aim of creating a repository of past question papers and study resources to aid your academic needs. We have all the courses of
                         first year and B.tech courses taught by Department of EEE covered.
                     </p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <br><br>
+                    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Filter out your Course
-                      </button>
+                      </button> -->
+                      <div class="headers">
+                        <a target=”_blank” href="https://iitgoffice-my.sharepoint.com/:f:/g/personal/cepstrum_iitg_ac_in/EuQ5luYjd-JNsnD7V_VNmN0BQb55lewXQlSAQ2Q9aZFdOA" >
+                            <div class="btn btn-primary px-4 p-2">Freshmen Year</div>
+                        </a>
+                        <a target=”_blank” href="https://iitgoffice-my.sharepoint.com/:f:/g/personal/cepstrum_iitg_ac_in/EokGx0Y6uEBNgpMSR1vdYHYBaBH2PGmHbr50kV6vWWC-Cw" >
+                            <div class="btn btn-primary px-4 p-2">Sophomore Year</div>
+                        </a>
+                        <a target=”_blank” href="https://iitgoffice-my.sharepoint.com/:f:/g/personal/cepstrum_iitg_ac_in/EhyI3mgdL0dHoINTwFbnhIcBTA21DE-2v_UasUyfj8Ii7A" >
+                            <div class="btn btn-primary px-4 p-2">Pre-final Year</div>
+                        </a>
+                        <a target=”_blank” href="https://iitgoffice-my.sharepoint.com/:f:/g/personal/cepstrum_iitg_ac_in/EuxljiN2e55DhlZLwYZl3JgBD2V6HWr_HHL9oQnUNHthxQ" >
+                            <div class="btn btn-primary px-4 p-2">Final Year</div>
+                        </a>
+                        </div>
+
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="color: black;">
@@ -124,8 +165,8 @@
 
 
 
-<br><br>
-<div id="main">
+<!-- <br><br> -->
+<!-- <div id="main">
     {% if paperman_list %}
     <div class="row">
         {% for i in filter.qs %}
@@ -147,6 +188,6 @@
         {% endfor %}
     </div>
 
-</div>
+</div> -->
 
 {% endif %} {% endblock %}
