--- a/inked_intellects/templates/inked_intellects/inked_intellects_list.html
+++ b/inked_intellects/templates/inked_intellects/inked_intellects_list.html
@@ -59,14 +59,16 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image:
-        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');">
+        <!-- <div class="carousel-item active" style="background-image:
+        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');"> -->
+        <div class="carousel-item active" style="background: rgb(6,35,30);
+        background: linear-gradient(326deg, rgba(6,35,30,1) 0%, rgba(5,54,29,1) 96%);">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
-                    <h1><b>About <br> Inked Intellect </b> </h1>
+                    <h1><b>About <font color="yellow">Inked Intellects</font> </b> </h1>
                     <br>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corporis, natus quos praesentium rerum aspernatur laudantium at nobis cupiditate velit fuga quo repellendus, consequuntur officiis. Repudiandae animi cupiditate cum ea?
+                        This series features articles by sophomores of the EEE department, chronicling their experiences at various conferences and contests as well as their adventures in exploring new fields and domains like Finance, Competitive Programming and Machine Learning.
                     </p>
 
                 </div>
