--- a/inphase/templates/inphase/inphase_list.html
+++ b/inphase/templates/inphase/inphase_list.html
@@ -41,7 +41,7 @@ my-carousel" data-ride="carousel">
                     </h1>
                     <br>
                     <p>
-                        A conglomeration of the typical seniors a fresher comes across and the 2 am friends hostellers make during their stay here in campus, Cepstrum is the students' society of the department of Electronics and Electrical Engineering, IIT Guwahati.
+                        Inphase is the departmental magazine of the Department of EEE, IIT Guwahati. Curated and published by the student body Cepstrum, it will also be a medium to gain valuable insights from the experiences of our alumni and from prominent people in the industry as well as academia. InPhase aims to encompass all this and also act a creative outlet for students and professors alike.
                         <br>
                         <br>
                         <br>
