--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -8,33 +8,109 @@
         -o-background-size: cover;
         background-size: cover;
     }
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+    }
+    
+    .carousel-item-content {
+        /* margin-top: 20%;
+  margin-left: 15%;
+  margin-right: 30%; */
+        font-size: 24px;
+    }
+    
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+    
+    .link-button {
+        color: white;
+        background-color: #555555;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    
+    .link-button:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #222222;
+        display: inline-block;
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    .embed-responsive{
+        height: auto;
+    }
+
+    
 </style>
 
 {% endblock %} {% block carousel %}
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
 
-        {% for i in talk_list %}
 
-        <div class="carousel-item {% if i.id == 1 %} active {% endif %}" style="background-image:
-            url('{{i.pic}}');">
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <!-- <div class="carousel-item active" style="background-image:
+        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');"> -->
+        <div class="carousel-item active" style="background: rgb(147,57,3);
+        background: linear-gradient(326deg, rgba(147,57,3,1) 0%, rgba(133,41,2,1) 96%);">
             <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+                    <h1><b>About <font color="yellow">Talks</font> </h1>
+                    <br></b>
+                    <p>
+                        Talks are something that help imparting to juniors the unmatched experiences of seniors. They also help in reducing the conversation gap between the seniors and juniors. And so do we conduct regular talks for our EEE students.   
+                    </p>
+                </div>
 
 
             </div>
 
         </div>
-        {% endfor %}
+
+
+
+
+
+
+        <!-- <div class="carousel-item" data-interval="9000">
+      <video autoplay muted loop width="100%" height="130%" id="myVideo">
+        <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+      </video>
+
+    </div> -->
 
     </div>
-    <button class="carousel-control-prev" data-bs-target="#carouselExampleIndicators" type="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" data-bs-target="#carouselExampleIndicators" type="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+
 </div>
 
-{% endblock %}
+{% endblock %} {% block content %}
+<br><br><br><br>
+
+<div class="container" style="align-items: center;">
+    {% for i in talk_list %}
+
+        <div class="card mb-3 h-10" style="min-height: 100%;">
+
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe width="100%" height="100%" class="embed-responsive-item" src="{{i.pic}}" allowfullscreen></iframe>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+{% endblock content %}
