--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -49,8 +49,20 @@
         padding: 5px 10px;
         border-radius: 5px;
     }
-    .embed-responsive{
-        height: auto;
+
+
+    .video {
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+    }
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
     
@@ -101,13 +113,12 @@
 
 {% endblock %} {% block content %}
 <br><br><br><br>
-
 <div class="container" style="align-items: center;">
     {% for i in talk_list %}
 
-        <div class="card mb-3 h-10" style="min-height: 100%;">
+        <div class="card mb-5 h-8" style="min-height: 100%;">
 
-            <div class="embed-responsive embed-responsive-16by9">
+            <div class="embed-responsive embed-responsive-16by9 video">
                 <iframe width="100%" height="100%" class="embed-responsive-item" src="{{i.pic}}" allowfullscreen></iframe>
             </div>
         </div>
