--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -79,8 +79,8 @@
     <div class="carousel-inner" role="listbox">
         <!-- <div class="carousel-item active" style="background-image:
         url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');"> -->
-        <div class="carousel-item active" style="background: rgb(147,57,3);
-        background: linear-gradient(326deg, rgba(147,57,3,1) 0%, rgba(133,41,2,1) 96%);">
+        <div class="carousel-item active" style="background: rgb(164,63,6);
+        background: linear-gradient(326deg, rgba(164,63,6,0.9650110410375088) 3%, rgba(200,13,13,1) 97%);">
             <div class="carousel-item-screen">
                 <div class="carousel-item-content">
                     <h1><b>About <font color="yellow">Talks</font> </h1>
