--- a/team/templates/team_list.html
+++ b/team/templates/team_list.html
@@ -57,7 +57,7 @@
 <div id="carouselExampleIndicators" class="carousel slide my-carousel
 my-carousel" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image: url('/static/team/team.jpg') ">
+        <div class="carousel-item active" style="background-image: {% for i in team_list %} {% if i.category.name == 'Cover' %}url('/static/team/team.jpg'){% endif %} {% endfor %} ">
             <!-- <div style="text-align: center; padding-top: 40%;"> -->
             <!-- <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl">Team EXECUTIVES</button>
       <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target=".bd-example-modal-xl1">4th Year</button>
