--- a/talk/templates/talk/home.html
+++ b/talk/templates/talk/home.html
@@ -77,18 +77,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-        <!-- <div class="carousel-item active" style="background-image:
-        url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg');"> -->
-        <div class="carousel-item active" style="background: rgb(164,63,6);
-        background: linear-gradient(326deg, rgba(164,63,6,0.9650110410375088) 3%, rgba(200,13,13,1) 97%);">
+        <div class="carousel-item active">
             <div class="carousel-item-screen">
-                <div class="carousel-item-content">
-                    <h1><b>About <font color="yellow">Talks</font> </h1>
-                    <br></b>
-                    <p>
-                        Talks are something that help imparting to juniors the unmatched experiences of seniors. They also help in reducing the conversation gap between the seniors and juniors. And so do we conduct regular talks for our EEE students.   
-                    </p>
-                </div>
 
 
             </div>
