--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="carousel-inner">
 
         {% for i in hc %}
-        <a href="{{i.name}}">
+        <!-- <a href="{{i.name}}"> -->
             <div class="carousel-item {% if i.id == 1 %} active {% endif %}" style="background-image:
             url('{{i.pic}}');">
                 <div class="carousel-item-screen">
@@ -23,7 +23,7 @@
                 </div>
 
             </div>
-        </a>
+        <!-- </a> -->
         {% endfor %}
 
 
